--- a/Mission06_Springer/Views/Home/Index.cshtml
+++ b/Mission06_Springer/Views/Home/Index.cshtml
@@ -3,6 +3,12 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">The Joel Hilton Film Collection</h1>
+    <img src="img/JoelHiltonHeadshot.jpg" alt="Joel Hilton Headshot">
+</div>
+
+<br/>
+
+<div>
+    <a asp-controller="Home" asp-action="AddMovies">Click here to add a movie to the collection!</a>
 </div>
