--- a/Mission06_Springer/Views/Shared/_Layout.cshtml
+++ b/Mission06_Springer/Views/Shared/_Layout.cshtml
@@ -29,12 +29,15 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddMovies">Add Movies</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieCollection">View Movie Collection</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-<div class="container">
+<div class="container-fluid px-3">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
