--- a/Mission06_Springer/Views/Home/Index.cshtml
+++ b/Mission06_Springer/Views/Home/Index.cshtml
@@ -2,13 +2,25 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">The Joel Hilton Film Collection</h1>
-    <img src="img/JoelHiltonHeadshot.jpg" alt="Joel Hilton Headshot">
-</div>
+<div class="container text-center py-5">
 
-<br/>
+    <h1 class="display-4 mb-4">
+        The Joel Hilton Film Collection
+    </h1>
 
-<div>
-    <a asp-controller="Home" asp-action="AddMovies">Click here to add a movie to the collection!</a>
+    <!-- Joel's photo -->
+    <img src="img/JoelHiltonHeadshot.jpg"
+         alt="Joel Hilton Headshot"
+         class="img-fluid rounded shadow-sm mb-4"
+         style="max-width: 600px;" />
+
+    <div>
+        <!-- Add movie button -->
+        <a asp-controller="Home"
+           asp-action="AddMovies"
+           class="btn btn-primary px-4 rounded-pill">
+            Add a Movie to the Collection!
+        </a>
+    </div>
+
 </div>
